# dagster_sc

./: .gitignore  README.md  pyproject.toml
.dg/: telemetry.yaml
dagster_home/: dagster.yaml
src/cls_data/defs/: assets.py  models.py
src/cls_data/process/: __init__.py  create_dataset_splits.py
src/sc/defs/: asset.py
src/sc/process/: __init__.py  small_crop.py
